# jigsaw-sketch

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_sketch.cpp
data/: README.md
examples/: CMakeLists.txt  basic_usage.cpp  flow_processor.cpp  word_count.cpp
include/jigsaw/: cell.hpp  config.hpp  sketch.hpp  sketch_types.hpp
include/jigsaw/utils/: allocator.hpp  hash.hpp  simd.hpp
tests/: CMakeLists.txt  test_sketch.cpp
